--- a/app/games/games.html
+++ b/app/games/games.html
@@ -18,11 +18,11 @@
         </div>
     </div>
     <p></p>
-
+     <!--Game Id is added just to debug the game object in controller, it could be removed -->
     <table class="table table-striped table-hover table-condensed">
         <thead>
             <tr>
-                <!--<th>Game Id</th>-->
+                <th>Game Id</th>
                 <th>Game Time</th>
                 <th>Home Team</th>
                 <th>Away Team</th>
@@ -32,7 +32,7 @@
         </thead>
         <tbody>
             <tr ng-repeat="game in vm.games | orderBy:'gameTime'">
-                <!--<td>{{vm.logGame(game)}}</td>-->
+                <td>{{vm.logGame(game)}}</td>
                 <td>{{game.gameTime | date: 'short'}}</td>
                 <td>{{vm.teamsLookup[game.team1Id]}}</td>
                 <td>{{vm.teamsLookup[game.team2Id]}}</td>
